--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,6 @@
 cmake_minimum_required(VERSION 3.23)
-project(GuarnieriRamirez_Ejercicio3UTN C)
+project(TPN2_GuarnieriRamirez)
 
-set(CMAKE_C_STANDARD 11)
-set(HEADERS
-        helper.h
-        main.cpp
-        SistemaLiquidadorDeSueldo.h
-        Cadete.h
-        Empleado.h
-        Gerente.h
-        ReciboDeSueldo.h)
+set(CMAKE_CXX_STANDARD 23)
+
+add_executable(TPN2_GuarnieriRamirez main.cpp Gerente.h Empleado.h Helper.h Cadete.h)
